--- a/my-portfolio/Backend/Config/config.env
+++ b/my-portfolio/Backend/Config/config.env
@@ -1,5 +1,5 @@
 PORT=5000
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://aman-portfolio-frontend.onrender.com/
 SMPT_HOST=smtp.gmail.com
 SMPT_MAIL=typingaman1@gmail.com
 SMPT_PASSWORD=cjrrzipjudezxths
